NEWS for the Nettle 3.9.1 release

	This is a bugfix release, fixing a few bugs reported for
	Nettle-3.9. The bug in the new OCB code may be exploitable for
	denial of service or worse, since triggering it leads to
	memory corruption. Upgrading from Nettle-3.9 to the new
	version is strongly recommended.

	The new version is intended to be fully source and binary
	compatible with Nettle-3.6. The shared library names are
	libnettle.so.8.8 and libhogweed.so.6.8, with sonames
	libnettle.so.8 and libhogweed.so.6.

	Bug fixes:

	* Fix OCB loop for processing messages of size 272 bytes or
	  larger. Reported and fixed by Jussi Kivilinna.

	* Fix alignment bug in the new x86_64 non-pclmul assembly
	  implementation of ghash. Reported by Henrik Grubbström.

	* Fix build-time memory leak in eccdata. Reported by Noah
	  Watkins.

NEWS for the Nettle 3.9 release

	This release includes bug fixes, several new features, a few
	performance improvements, and one performance regression
	affecting GCM on certain platforms.

	The new version is intended to be fully source and binary
	compatible with Nettle-3.6. The shared library names are
	libnettle.so.8.7 and libhogweed.so.6.7, with sonames
	libnettle.so.8 and libhogweed.so.6.

	This release includes a rewrite of the C implementation of
	GHASH (dating from 2011), as well as the plain x86_64 assembly
	version, to use precomputed tables in a different way, with
	tables always accessed in the same sequential manner.

	This should make Nettle's GHASH implementation side-channel
	silent on all platforms, but considerably slower on platforms
	without carry-less mul instructions. E.g., benchmarks of the C
	implementation on x86_64 showed a slowdown of 3 times.

	Bug fixes:

	* Fix bug in ecdsa and gostdsa signature verify operation, for
	  the unlikely corner case that point addition really is point
	  duplication.

	* Fix for chacha on Power7, nettle's assembly used an
	  instruction only available on later processors. Fixed by