@@ -113,6 +113,7 @@
 /ed448-test
 /shake256-test
 /x86-ibt-test
+/drbg-ctr-aes256-test
 
 /test.in
 /test1.out
