@@ -1,3 +1,9 @@
+NEWS for the Nettle 3.10 release
+
+	New features:
+
+	* Added DRBG-CTR with AES256, contributed by Simon Josefsson.
+
 NEWS for the Nettle 3.9.1 release
 
 	This is a bugfix release, fixing a few bugs reported for
